<resources xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="action_settings">Settings</string>
    <string name="add_new_device">Add a New Device</string>
    <string name="support_faq">Support and FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="private_policy_tips">Find the private policy here.</string>
    <string name="terms_conditions_tips">Find the information here.</string>
    <string name="support_faq_tips">Need any help? We can help you.</string>
    <string name="add_new_device_tips">Include another HiRemote device by adding it here.</string>
    <string name="play_sounds">Play Sounds</string>
    <string name="contact_us_tips">Didn\'t find your answer in FAQs. Reach out to us directly.</string>
    <string name="app_name">HiRemote</string>
    <string name="intro_location_title">Pin Location</string>
    <string name="intro_location_detail">You can easily find the history of all the locations you have been to.</string>
    <string name="intro_find_title">Find My Item</string>
    <string name="intro_find_detail">Search for the item attached to the HiRemote.</string>
    <string name="intro_camera_title">Take Photos</string>
    <string name="intro_camera_detail">Use the shutter button on your HiRemote to snap pics</string>
    <string name="intro_voice_title">Voice Memos</string>
    <string name="intro_voice_detail">You easily can store, rename, or delete your audio file.</string>
    <string name="intro_hiremote_title">HiRemote Control</string>
    <string name="my_bag">My Bag</string>
    <string name="edit">Edit</string>
    <string name="start">Get Started</string>
    <string name="edit_location_title">Change a name</string>
    <string name="edit_record_title">Change a name</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="exit_now">Exit Now</string>
    <string name="tips">Tips</string>
    <string name="your_app_is_invalid">We are so sorry to tell you that this App is invalid now!</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="upgrade_later">Upgrade Later</string>
    <string name="downloading">Downloading</string>
    <string name="prompt_upgrade_string_format">The new version %1$s is found. \n %2$s</string>
    <string name="force_upgrade_string_format">This version of app is Invalid now. You must upgrade to the new version %1$s. \n %2$s</string>
    <string name="something_wrong_downloading_try_again">There was something wrong happened while downloading package, please try again!</string>
    <string name="something_wrong_downloading_try_later">There was something wrong happened while downloading package, you can try later!</string>
    <string name="retry">Retry</string>
    <string name="open_bluetooth_now">Turn On</string>
    <string name="bluetooth_off_tips">Turn on Bluetooth...</string>
    <string name="nonsupport_bluetooth_tips">Oops! Your device is not support Bluetooth 4.0!</string>
    <string name="not_found_new_peripheral_tips">Oops! Can not find new peripheral! Do you want to connect the old one?</string>
    <string name="buzz_my_item">Buzz my item</string>
    <string name="connect_old_peripheral">Connect to last device</string>
    <string name="oops">Oops.</string>
    <string name="not_found_peripheral_tips">It looks like we can\'t find it, let\'t try again!</string>
    <string name="have_a_problem">have a problem</string>
    <string name="support">Support</string>
    <string name="hismart_add_success">HiRemote was added successfully!</string>
    <string name="rename_peripheral_tips">First step: Take a picture of the item linked to your HiRemote.</string>
    <string name="rename_peripheral_btn_text">Rename the HiRemote as...</string>
    <string name="next">Next</string>
    <string name="add_a_hismart">Add a HiRemote</string>
    <string name="add_a_hismart_tips">i: Make sure your smartphone\'s Bluetooth is turned on. \nii: Hold the play button of the HiRemote to activate it.</string>
    <string name="scanning">Scanning...</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="voice_memo">Voice Memos</string>
    <string name="stop">Stop</string>
    <string name="forgot_password">Forgot password</string>
    <string name="password_hint">Password:</string>
    <string name="account_hint">UserName/E-mail:</string>
    <string name="user_name_hint">UserName:</string>
    <string name="email_hint">E-mail:</string>
    <string name="confirm_password_hint">Confirm password:</string>
    <string name="regsiter_agree_policy">I Agree to ...</string>
    <string name="login_title">Login</string>
    <string name="login_btn_text">Login</string>
    <string name="account_can_not_be_null">Oops! Your account can not be null</string>
    <string name="register_btn_text">Register new Account</string>
    <string name="register_title">Register</string>
    <string name="password_can_not_be_null_more_than_5_letter">Oops! Your passwor can not be null and more than 5 letters.</string>
    <string name="email_invalid">Oops! Your email is invalid.l</string>
    <string name="password_not_same">Oops! Please your double passwords are not the same.</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="please_check_your_email_later">Please check your emaillater.</string>
    <string name="reset_password_btn_text">Reset Password</string>
    <string name="reset_password_email_hint">E-mail:</string>
    <string name="reset_password_tips">We will send an email to your email box, you can reset your password by  the email.</string>
    <string name="location_history">Location History</string>
    <string name="location">Location</string>
    <string name="disconnection_history">Disconnection History</string>
    <string name="make_sure_you_delete_location">Do you make sure that you want to delete this location</string>
    <string name="find_my_item_title">Find My Item</string>
    <string name="history">History</string>
    <string name="no_device">No Device</string>
    <string name="change_name">Change Name</string>
    <string name="your_device_far_away_from_you">Warning your HiSmart bag is 90 feet away from you!</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space" product="default">Your SD card is full.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Fail to access SD card.</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Camera settings will be restored to defaults.</string>
    <string name="review_play">PLAY</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">OK</string>
    <string name="review_retake">RETAKE</string>
    <string name="camera_gallery_photos_text">Gallery</string>
    <string name="switch_camera_id">Switch Camera</string>
    <string name="pref_camera_id_title">Select camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default" translatable="false">high</string>
    <string name="pref_video_quality_entry_high">High (30m)</string>
    <string name="pref_video_quality_entry_low">Low (30m)</string>
    <string name="pref_video_quality_entry_mms">MMS (Low, 30s)</string>
    <string name="pref_video_quality_entry_youtube">YouTube (High, 10m)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_3264x2488">8M Pixels</string>
    <string name="pref_camera_jpegquality_default" translatable="false">superfine</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_camera_jpegquality_entry_superfine">Super fine</string>
    <string name="pref_camera_jpegquality_entry_fine">Fine</string>
    <string name="pref_camera_jpegquality_entry_normal">Normal</string>
    <string name="pref_camera_focusmode_default" translatable="false">auto</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_coloreffect_default" translatable="false">none</string>
    <string name="pref_camera_coloreffect_title">Color effect</string>
    <string name="pref_camera_coloreffect_entry_none">None</string>
    <string name="pref_camera_coloreffect_entry_mono">Mono</string>
    <string name="pref_camera_coloreffect_entry_sepia">Sepia</string>
    <string name="pref_camera_coloreffect_entry_negative">Negative</string>
    <string name="pref_camera_coloreffect_entry_solarize">Solarize</string>
    <string name="pref_camera_coloreffect_entry_posterize">Posterize</string>
    <string name="pref_camera_coloreffect_entry_aqua">Aqua</string>
    <string name="pref_camera_coloreffect_entry_pastel">Pastel</string>
    <string name="pref_camera_coloreffect_entry_mosaic">Mosaic</string>
    <string name="pref_camera_coloreffect_entry_redtint">Red tint</string>
    <string name="pref_camera_coloreffect_entry_bluetint">Blue tint</string>
    <string name="pref_camera_coloreffect_entry_greentint">Green tint</string>
</resources>