<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_28pt"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/margin_val_40px"
        android:layout_marginLeft="@dimen/margin_val_40px"
        android:text="@string/reset_password_tips"
        android:layout_marginRight="@dimen/margin_val_40px"/>

    <EditText
        android:id="@+id/reset_password_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_val_40px"
        android:textSize="@dimen/text_size_30pt"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:padding="@dimen/margin_val_16px"
        android:hint="@string/email_hint"
        android:background="@color/default_edittext_bg"/>

    <Button
        android:id="@+id/reset_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_val_40px"
        android:text="@string/reset_password_btn_text"
        android:background="@color/default_btn_bg"
        android:textSize="@dimen/text_size_30pt"
        android:textAllCaps="false"
        android:textColor="@android:color/white"/>

</LinearLayout>